Lowered train search area, and fixed NBT data requests